namespace Carfleet
{
    public class Person
    {
        #region private attributes

        #endregion private attributes

        #region public methods

        #endregion public methods

        #region private methods
        #endregion private methods
    }
}
