@startuml
skinparam classAttributeIconSize 0
<style>
classDiagram {
  header {
    fontstyle bold
    
  }

}
</style>

class Entreprise #line.bold
class Driver #line.bold
class Person #line.bold
class Vehicule #line.bold
exception DriverNotFoundException #IMPLEMENTATION;line.bold
exception VehiculeNotFoundException #IMPLEMENTATION;line.bold
exception VehiculeAlreadyAssignedException #IMPLEMENTATION;line.bold

Entreprise : -drivers : Driver[]
Entreprise : -vehicules : Vehicule[]
Entreprise : +assignVehiculeToDriver(chassisNumber string, driverEmailaddress string) : void
Entreprise : -getDriverByEmailaddress(driverEmailaddress string) : Driver
Entreprise : -getVehiculeByChassisNumber(chassisNumber string) : Vehicule

Driver : -vehicule : Vehicule
Driver : +takeAVehicule(vehicule Vehicule) : void

Person : -addressEmail : string
Person : +Person(emailaddress string)
Person : +getEmail() : string

Vehicule : +Vehicule(chassisNumber : string)
Vehicule : +toString() : string
Vehicule : -chassisNumber : string 
 

Entreprise o-- Driver
Entreprise o-- Vehicule
Driver --|> Person
Entreprise +-- DriverNotFoundException 
Entreprise +-- VehiculeNotFoundException 
Driver ..> Vehicule
Driver ..> VehiculeAlreadyAssignedException : << throw >> 



@enduml